@@ -9,6 +9,7 @@ import General.Timing(resetTimings)
 import Control.Monad.Extra
 import Control.Exception.Extra
 import Data.Maybe
+import Data.IORef
 import qualified System.Directory as IO
 import General.Extra
 import General.GetOpt
@@ -29,8 +30,9 @@ main = do
                 if takeExtension file `elem` [".hs",".lhs"] then ("runhaskell", file:args) else (toNative file, args)
             e <- rawSystem prog args
             when (e /= ExitSuccess) $ exitWith e
-        Nothing -> 
-            withArgs ("--no-time":args) $
+        Nothing -> do
+            withArgs ("--no-time":args) $ whileM $ do
+                redoRef <- newIORef $ return False
                 shakeArgsWith shakeOptions{shakeCreationCheck=False} flags $ \opts targets -> do
                     let tool = listToMaybe [x | Tool x <- opts]
                     makefile <- case reverse [x | UseMakefile x <- opts] of
@@ -40,8 +42,13 @@ main = do
                             case res of
                                 Just x -> return x
                                 Nothing -> errorIO "Could not find `build.ninja'"
-                    runNinja makefile targets tool
-
+                    res <- runNinja makefile targets tool
+                    case res of
+                        Nothing -> return Nothing
+                        Just (redo, rules) -> do
+                            writeIORef redoRef redo
+                            return $ Just rules
+                join $ readIORef redoRef
 
 data Flag = UseMakefile FilePath
           | Tool String
